package com.github.yck.pattern.structural.structural.flyweight.circle;

public interface Shape {
    void draw();
}
